--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,222 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #e5e5e5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-container {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 1200px;
+  background: #fff;
+  margin: 40px auto;
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+}
+/* main content section */
+.main-content-section {
+  padding: 100px 90px;
+}
+.main-content-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 27px;
+  color: #000000;
+  margin-bottom: 10px;
+}
+/* about me section */
+.about-me-section {
+  margin: 0 0 40px 0;
+}
+.about-me-profession {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 17px;
+  color: #000000;
+  margin: 0 0 20px 0;
+}
+.about-me-name {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 45px;
+  line-height: 55px;
+  color: #000000;
+  margin: 0 0 25px 0;
+}
+.about-me-description {
+  margin: 0;
+  width: 600px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+}
+.about-me-description-skills {
+  color: #9c9ea0;
+  font-weight: normal;
+}
+
+/* my projects section */
+
+.my-projects-section {
+  display: flex;
+  flex-direction: column;
+  /* margin-bottom: 50px; */
+}
+.my-projects-list {
+  padding: 0 0 0 18px;
+}
+.my-projects-item {
+  color: #000000;
+  font-weight: normal;
+}
+.my-projects-link {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: #201f1f;
+  text-decoration: none;
+}
+.my-projects-link:hover {
+  font-weight: normal;
+  color: #9c9ea0;
+}
+.my-projects-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: #201f1f;
+  margin-left: 5px;
+}
+.my-projects-bracket {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #9c9ea0;
+}
+/* my work and education experience */
+.my-education-experience,
+.my-work-experience-company {
+  color: #9c9ea0;
+  margin-bottom: 0;
+}
+.my-work-experience-position {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
+  margin: 0;
+}
+.my-work-period {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 15px;
+  color: #201f1f;
+  margin: 0 0 10px 0;
+}
+.my-work-divider {
+  color: #000000;
+}
+.my-work-experience-duties {
+  padding: 0 0 0 18px;
+}
+.my-work-experience-duty {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: #201f1f;
+}
+.my-work-experience-company-block {
+  margin: 0 15px 0 0;
+}
+.my-education-period {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 15px;
+  margin-top: 0;
+}
+.my-education-level {
+  margin: 0;
+}
+/* sidebar section */
+
+.sidebar-section {
+  background: #9c9ea0;
+  width: 370px;
+  padding: 40px;
+}
+.contacts-section,
+.tech-skills-section,
+.soft-skills-section,
+.language-level-section {
+  margin: 50px 0 0 40px;
+}
+.sidebar-title {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: floralwhite;
+  margin-bottom: 10px;
+}
+
+/* contacts section */
+
+.contacts-section-link {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 24px;
+  text-decoration: none;
+}
+.contacts-section-link:hover {
+  font-weight: normal;
+  color: yellow;
+}
+.contacts-section-text {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 24px;
+}
+/* tech skills section */
+.tech-skills-list {
+  padding: 0;
+}
+.tech-skills-item {
+  list-style-type: none;
+}
+.tech-skills-item-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
+}
+/* soft skills section */
+.soft-skills-list,
+.language-level-list {
+  padding: 0 0 0 17px;
+}
+.soft-skills-item,
+.language-level-item {
+  list-style-type: none;
+}
+.soft-skills-item-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
 }
