--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,7 @@ body {
 /* sidebar section */
 
 .sidebar-section {
-  background: #9c9ea0;
+  background: #558CC2;
   width: 370px;
   padding: 40px;
 }
