--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,7 @@ body {
 /* sidebar section */
 
 .sidebar-section {
+  /* background-image: url(./images/photo_2023-05-05_20-43-45.jpg); */
   background: #558CC2;
   width: 370px;
   padding: 40px;
